updating repo